k8s/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
      - name: flask-container
        image: sanupdocker/devops-flask-app:latest

        ports:
        - containerPort: 5000

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"

          limits:
            memory: "256Mi"
            cpu: "200m"

        livenessProbe:
          httpGet:
            path: /health
            port: 5000

          initialDelaySeconds: 10
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /health
            port: 5000

          initialDelaySeconds: 5
          periodSeconds: 5
