k8s/flask-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flask-ingress

spec:
  rules:
    - host: devops.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: flask-service

                port:
                  number: 5000
